--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,4 +2,4 @@ encoding:       "utf-8"
 locale :        "en-EN"
 highlighter:    "rouge"
 markdown:       "kramdown"
-theme:          "slate"
+theme:          "Slate"
