--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-encoding:       "utf-8"
-locale :        "en-EN"
-highlighter:    "rouge"
-markdown:       "kramdown"
-theme:          "Slate"
+encoding: utf-8
+locale : en-EN
+highlighter: rouge
+markdown: kramdown
+theme: Slate
